client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
@import 'tailwindcss';

:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: content-box;
}

html,
body,
#root {
  margin: 0;
  padding: 0;
  height: 100%;
}

.perspective-1000 {
  perspective: 500px;
}

.test {
  column-fill: auto;
}

@theme {
  --font-lora: "Lora", serif;

  /* Base layers */
  --color-base: #F8F5F1;
  --color-mantle: #F1EAE4;
  --color-crust: #EAE2DC;
  --color-modal: #E8E3DD;

  --color-base-hover: #F1ECE5;

  --color-tag: #EDE6DE;
  --color-tag-selected: #C6B9AD;
  --color-tag-hover: #E3D9CF;

  /* Text */
  --color-icon: #5A4634;
  --color-icon-muted: #8C7A68;
  --color-icon-accent: #A67856;
  --color-icon-disabled: #CBB8A6;

  --color-primary: #4B3B2A;
  --color-secondary: #7C6A58;
  --color-accent: #A67856;

  /* Accents */
  --color-accent: #8B9F87;
  --color-peach: #FFB86C;
  --color-rose: #B86A73;
  --color-yellow: #E5C890;
  --color-blue: #8CA0AE;
  --color-lavender: #B6A7B2;
  --color-pink: #E7DFD8;
  --color-green: #B0B7A5;

  /* Subtle neutrals */
  --color-overlay0: #DFD7D2;
  --color-overlay1: #CFC7C2;
  --color-overlay2: #BFB7B2;
}

